# ML4Keiba

./: .env.example  .gcloudignore  .gitignore  20211002_mylib.py  README.md  context.jsonld  contexts.jsonld  convert.py  docker-compose.yml  getRaceInfo.py  getRaceList.py  horseTsv2Ttl.py  myScrapLib.py  mylib.py  namelist.txt  nohup.out  openapi.yaml  package-lock.json  package.json  pyproject.toml  scrap.py  updateHorseList.py
.github/workflows/: dailyUpdate.yaml  deploy_to_lambda.yml
data/csv/horse/: 1394.tsv  1911.tsv  1913.tsv  1915.tsv  1916.tsv  1917.tsv  1918.tsv  1919.tsv  1920.tsv  1921.tsv  1922.tsv  1923.tsv  1924.tsv  1925.tsv  1926.tsv  1927.tsv  1928.tsv  1929.tsv  1930.tsv  1931.tsv  1932.tsv  1933.tsv  1934.tsv  1935.tsv  1936.tsv  1937.tsv  1938.tsv  1939.tsv  1940.tsv  1941.tsv  1942.tsv  1943.tsv  1944.tsv  1945.tsv  1946.tsv  1947.tsv  1948.tsv  1949.tsv  1950.tsv  1951.tsv  (+69 more)
data/list/horse/: 1406.txt  1938.txt  1949.txt  1950.txt  1951.txt  1953.txt  1954.txt  1955.txt  1956.txt  1957.txt  1958.txt  1959.txt  1960.txt  1961.txt  1962.txt  1963.txt  1964.txt  1965.txt  1966.txt  1967.txt  1968.txt  1969.txt  1970.txt  1971.txt  1972.txt  1973.txt  1974.txt  1975.txt  1976.txt  1977.txt  1978.txt  1979.txt  1980.txt  1981.txt  1982.txt  1983.txt  1984.txt  1985.txt  1986.txt  1987.txt  (+33 more)
data/list/jockey/: 2011.txt  2012.txt  2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  2019.txt  2020.txt  id_list_start_with_00.txt  id_list_start_with_01.txt  id_list_start_with_05.txt
data/list/owner/: 2011.txt  2012.txt  2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  2019.txt  2020.txt  id_list_start_with_00.txt  id_list_start_with_01.txt  id_list_start_with_02.txt  id_list_start_with_03.txt  id_list_start_with_04.txt  id_list_start_with_05.txt  id_list_start_with_06.txt  id_list_start_with_07.txt  id_list_start_with_08.txt  id_list_start_with_09.txt  id_list_start_with_10.txt  id_list_start_with_11.txt  id_list_start_with_12.txt  id_list_start_with_13.txt  id_list_start_with_14.txt  (+85 more)
gcp/: cloud-config.yml  startup.sh
nginx/: default.conf.template
python/: README.md  convert.py  dailyUpdate.py  dump.py  getHorseProfile.py  getRaceDetail.py  getRaceInfo.py  horseTsv2Ttl.py  myScrap.py  myScrapLib.py  pyproject.toml  raceTsv2Ttl.py  updateHorseList.py
python/libs/: entrypoint.py  filter.py  path.py  validate.py
src/: .swcrc  deploy.ts  index.ts  openapi.ts
virtuoso/: initialLoad.sql  rdfloader.sql
(+197796 files in other folders)
