[tool.poetry]
name = "ML4Keiba"
version = "0.0.0"
description = ""
authors = ["Ningensei848"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.62.3"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

