[tool.poetry]
name = "ml4keiba"
version = "0.0.1"
description = "Machine Learning for 競馬 Dataset"
authors = ["Ningensei848 <k.kubokawa@klis.tsukuba.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
lxml = "^4.8.0"
beautifulsoup4 = "^4.10.0"
pandas = "^1.4.1"
tqdm = "^4.63.0"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pyproject-flake8 = "^0.0.1-alpha.2"

[tool.black]
line-length = 119
# target-version = ['py310']       # Pythonのバージョン
include = '\.py$' # 対象ファイル
# skip-string-normalization = true # ''を""に変換しない設定(好みで変えてください)

# フォーマットしないファイル
exclude = '''
(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | \.idea
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | migrations
)
'''
[tool.isort]
profile = "black"
line_length = 119

[tool.flake8]
max-line-length = 119
max-complexity = 18
ignore = "E203,E266,W503,"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
